modify index and add another section

--- a/index.html
+++ b/index.html
@@ -610,6 +610,17 @@
                </footer>
               <!-- footer end -->
 
+              <section class="last-footer">
+
+                <p class="=la-fa">Bangladesh 2.0</p>
+                <div class="la-fa-icon">
+                    <img src="image/footer/Facebook.png" alt="">
+                    <img src="image/footer/Instagram.png" alt="">
+                </div>
+
+
+              </section>
+
          <script src="script.js"></script>
 
 
